Fixed overflow: scroll in .body

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,7 +3,6 @@
   background: #E9E9E9;
   height: 100%;
   width: 100vw;
-  display: flex;
   flex-direction: column;
 }
 
@@ -19,6 +18,7 @@
   box-sizing: border-box;
   justify-content: space-between;
   z-index: 2;
+  position: fixed;
 }
 
 .form__input {
@@ -65,13 +65,12 @@
 
 .body {
   width: 100%;
-  height: 100%;
-  position: absolute;
   display: flex;
-  box-sizing: border-box;
   align-items: flex-start;
   align-content: center;
   overflow: scroll;
+  flex-wrap: wrap;
+  background: lightpink;
   padding-top: 50px;
 }
 
@@ -90,21 +89,6 @@
   width: 200px;
 }
 
-.grid {
-  box-sizing: border-box;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 48vw);
-  height: 100vh;
-  width: 99vw;
-  grid-column-gap: 3vw;
-  justify-content: center;
-  align-content: flex-start;
-  @media screen and (min-width: 460px) {
-    grid-template-columns: repeat(auto-fit, 31vw);
-    grid-column-gap: 1vw;
-  }
-}
-
 .note {
   background: white;
   width: 48vw;
@@ -120,7 +104,6 @@
 }
 
 .button {
-  //   background: $accent !important;
   font-size: 40px;
   position: fixed;
   bottom: 50px;
